--- a/src/app/views/patient-details/patient-details.component.html
+++ b/src/app/views/patient-details/patient-details.component.html
@@ -75,7 +75,7 @@
 
   <div class="consultation-details" #consultationDetailsContainer>
     <div class="card">
-      <h3 class="card-title">📋 Detalles de la Consulta</h3>
+      <h3 class="card-title">📋 Detalles del Servicio</h3>
 
       <div class="card-content">
         <div class="info">
